# ih-depth-dataset

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
baselines/: README.md  __init__.py  depthanythingv2_hsi.py  unidepthv2_hsi.py  unik3d_hsi.py
baselines/learning_broadband/: __init__.py  depthanythingv2.py  depthpro.py  unidepthv2.py  unik3d.py
baselines/learning_hsi/: __init__.py  depthanythingv2_hsi.py  unidepthv2_hsi.py  unik3d_hsi.py
baselines/physics-based/: precompute_attenuation.py  run_bispectral.py  run_hyperspectral.py  run_quadspectral.py
baselines/physics_based/: __init__.py  predict_bispectral.py  predict_hyperspectral.py  predict_quadspectral.py  run_bispectral.py  run_hyperspectral.py  run_quadspectral.py
configs/release/: frozen_manifest_overrides_template.csv  frozen_manifest_qc_reviews_template.csv  manual_scene_exclusions.csv
ihd/: __init__.py  ihd_evaluator.py
ihd/annotation_workspace/: __init__.py  app.py  scene_service.py
ihd/annotation_workspace_nocyl/: app.py  scene_service.py
ihd/datasets/: README.md  build_frozen_manifest.py  build_frozen_manifest_v0.py  build_reproducible_qc_report.py  build_scene_facts_manifest_v0.py  build_visible_scene_manifest.py  calibration_lidar_cylindrical.py  compare_manual_rigid_transfer.py  cyl_corresp_eval.py  cylindrical_camera.py  depth_rasterization.py  evaluate_fixed_txt_to_las_transform.py  fit_corresp_to_lidar_nn.py  save_2d_points.py  (+14 more)
manifests/: 01_scene_facts_n306.csv  01_scene_facts_n306_summary.json  02_las_preprocessing_metadata_n4.csv  03_scene_quality_manifest_current_summary.json  04_las_preprocessing_metadata_n4.csv  04_occlusion_cleanup_manifest_current.csv  04_occlusion_cleanup_manifest_current_summary.json  05_scene_quality_manifest_current.csv  05_scene_quality_manifest_current_summary.json  05_scene_spot_mapping_v0.csv  06_frozen_manifest_v0.csv  06_frozen_manifest_v0_summary.json  06_occlusion_cleanup_manifest_current.csv  06_occlusion_cleanup_manifest_current_summary.json  07_frozen_manifest_v0.csv  07_frozen_manifest_v0_summary.json  08_baseline_results_log_v0.csv  scene_spot_mapping_v0.csv
metadata/: scenes_manifest.csv
scripts/: README.md
train/: README.md  depthanythingv2_train.py
(+229 files in other folders)
