[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ih-depth-dataset"
version = "0.1.0"
description = "IH-Depth dataset curation tools for the DARPA Invisible Headlights LWIR-LiDAR expansion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "fastapi",
    "laspy",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "scipy",
    "spectral",
    "uvicorn",
]

[project.optional-dependencies]
unik3d = [
    "setuptools<81",
    "torch",
    "torchvision",
    "unik3d @ git+https://github.com/lpiccinelli-eth/UniK3D.git",
]

[tool.setuptools.packages.find]
include = ["ihd*"]
